--- a/style.css
+++ b/style.css
@@ -106,7 +106,7 @@
   box-sizing: border-box;
   height: 850px;
   width:1395;
-  margin: auto auto;
+  margin: 20px auto 20px auto;
   padding: 0;
 }
 .col-3-section {
