--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-
+/* 
 * {
   margin: 0;
   padding: 0;
@@ -177,6 +177,195 @@
   width: 700px;
   height: 270px;
   background-color: rgba(255,255,255,255)
+}
+.col-4-1 {
+  float: left;
+  padding-right: 15px;
+}
+.col-4-2 {
+  float: right;
+  padding-left: 15px;
+} */
+
+* {
+  margin: 0;
+  padding: 0;
+}
+
+.container {
+  width: 100%;
+  box-sizing: border-box;
+}
+.row {
+  padding: 20px;
+  height: 30px;
+  margin-bottom: 20px;
+}
+.rows {
+  position: relative;
+  height: 70px;
+}
+.row-1,
+.row-2,
+.row-3,
+.row,
+.col-1-section-1,
+.col-1-section-2,
+.section-2,
+.col-3,
+.col-3-p-1,
+.col-3-p-2,
+.col-3-p-3,
+.col-3-div-1,
+.col-3-div-2,
+.col-3-div-3,
+.row-4-col-4,
+.row-4-col-4-1,
+.row-4-col-4-2,
+.row-4-col-4-3,
+.row-4-col-4-4,
+.row-5 {
+  background-color: rgba(196,196,196,255);
+}
+.row-2,
+.row-3 {
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%, 0);
+}
+.row-1,
+.row-2,
+.row-3 {
+  margin: 40px auto;
+  height: 70px;
+  width: 750px;
+}
+.row-2 {
+  top: 865px;
+  margin: 30px auto;
+  width: 950px;
+  transform: translate(-50%, 0);
+}
+.row-3 {
+  top: 1650px;
+  width: 1200px;
+  margin: 40px auto;
+}
+.col-1 {
+  height: 750px;
+  width: 100%;
+  margin: 30px 0 150px 0;
+  margin-top: 35px;
+}
+.col-1-section-1,
+.col-1-section-2 {
+  float: left;
+  width: 750px;
+  height: 750px;
+}
+.col-1-section-2 {
+  float: right;
+}
+.col-2 {
+  clear: both;
+  height: 670px;
+  width: auto;
+  margin: 50px 0;
+}
+.div-col-2 {
+  width: 1400px;
+  height: 650px;
+  margin: 20px auto;
+  margin-bottom: 25px;
+}
+.section-2 {
+  width: 320px;
+  height: 300px;
+  float: left;
+  margin: 15px 15px;
+}
+.col-3 {
+  clear: both;
+  height: 780px;
+  width: auto;
+  padding: 50px;
+  margin: 0 auto;
+  margin-top: 130px;
+}
+.div-col-3 {
+  box-sizing: border-box;
+  height: 700px;
+  width: 1350px;
+  margin: 40px 35px 40px 35px;
+  padding: 0;
+}
+.col-3-section {
+  width: 350px;
+  float: left;
+  padding: 30px;
+  height: 625px;
+  background-color: rgba(255,255,255,255);
+  margin: 10px 20px 10px 20px;
+}
+.col-3-p-1,
+.col-3-p-2,
+.col-3-p-3 {
+  box-sizing: border-box;
+  height: 45px;
+  width: 100px;
+  padding: 20px 175px;
+}
+.col-3-div-1,
+.col-3-div-2,
+.col-3-div-3 {
+  box-sizing: border-box;
+  height: 257px;
+  width: 100px;
+  margin: 30px 0;
+  padding: 0 175px;
+}
+.row-4 {
+  clear: both;
+  width: 500px;
+  height: 700px;
+  margin: 25px auto;
+  margin-bottom: 120px;
+}
+.row-4-col-4 {
+  width: 300px;
+  margin: 35px auto;
+  height: 65px;
+}
+.row-4-col-4-1,
+.row-4-col-4-2 {
+  width: 500px;
+  height: 65px;
+  margin: 15px 0;
+}
+.row-4-col-4-2 {
+  height: 270px;
+}
+.row-4-col-4-3 {
+  margin-top: 15px;
+  width: 240px;
+  height: 65px;
+  float: left;
+}
+.row-4-col-4-4 {
+  margin-top: 15px;
+  width: 240px;
+  height: 65px;
+  float: right;
+}
+.row-5 {
+  height: 270px;
+  clear: both;
+  padding: 30px;
+}
+.col-4 {
+  width: 700px;
+  height: 270px;
+  background-color: rgba(255, 255, 255, 255);
 }
 .col-4-1 {
   float: left;
